--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
   "require": {
-    "aura/sqlquery": "2.7.1"
+    "aura/sqlquery": "2.7.1",
+    "league/plates": "v3.4.0"
   },
   "autoload": {
     "psr-4": {
