--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
   "require": {
     "aura/sqlquery": "2.7.1",
-    "league/plates": "v3.4.0"
+    "league/plates": "v3.4.0",
+    "tamtamchik/simple-flash": "2.0.1"
   },
   "autoload": {
     "psr-4": {
