--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
   "require": {
     "aura/sqlquery": "2.7.1",
     "league/plates": "v3.4.0",
-    "tamtamchik/simple-flash": "2.0.1"
+    "tamtamchik/simple-flash": "2.0.1",
+    "nikic/fast-route": "^1.3"
   },
   "autoload": {
     "psr-4": {
